--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 	padding: 0px;
 	margin: 0px;
 	border: none;
+  box-sizing: border-box;
 }
 
 h1 {
@@ -25,6 +26,15 @@ h2 {
   line-height: normal;
 }
 
+h3 {
+  color: #F2785C;
+  font-family: Red Hat Text;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+
 ul {
   margin: 0;
   padding: 0;
@@ -41,17 +51,18 @@ a {
 }
 
 header {
-  background: url(../Travel/assets/images/HeaderBG.png);
-  background-position: center top;
-  background-repeat: no-repeat;
+  background: rgba(242, 120, 92, 0.70);
+  box-shadow: 0px 4px 4px 0px rgba(13, 96, 111, 0.50);
   width: 100%;
-  background-color: #F2785C;
   opacity: 70%;
 }
 
 .header_wrapper{
   margin: 0 auto;
   max-width: 1440px;
+  background: url(../Travel/assets/images/HeaderBG.png);
+  background-position: center top;
+  background-repeat: no-repeat;
 }
 
 .header_flex {
@@ -113,8 +124,7 @@ header {
 
 .preview_wrapper {
   padding: 32px 428px 221px 120px;
-  width: 892px;
-  height: 422px;
+
 }
 
 .preview_title {
@@ -124,6 +134,7 @@ header {
   font-style: normal;
   font-weight: 700;
   line-height: normal;
+  width: 892px;
 }
 
 .preview_description{
@@ -135,6 +146,7 @@ header {
   font-style: italic;
   font-weight: 700;
   line-height: normal;
+  width: 892px;
 }
 
 .preview_input {
@@ -171,3 +183,35 @@ header {
   line-height: normal;
 }
 
+.steps_wrapper {
+  margin: 0 auto;
+  max-width: 1440px;
+  padding: 80px 131px;
+}
+
+.steps_title {
+  text-align: center;
+}
+
+.steps_cards {
+  margin-top: 40px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.card_item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.item_text {
+  margin-top: 30px;
+  color: #0D606F;
+  font-family: Aleo;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
