--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,7 @@
-
 @import "base/base";
+@import "base/mixins";
+@import "base/placeholders";
+
 @import "abstract/constants";
 
 @import "components/buttons.scss";
