--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,8 +1,10 @@
+@import "mixins";
+
 * {
 	padding: 0px;
 	margin: 0px;
 	border: none;
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 html {
@@ -19,8 +21,8 @@ h1 {
   padding: 0;
   color: #FFF;
   font-family: Magra;
-  @include font($size:3.2rem, $weight:600);
   white-space: pre;
+  @include font($size:3.2rem, $weight:600);
 }
 
 h2 {
