--- a/sass/layouts/_destination.scss
+++ b/sass/layouts/_destination.scss
@@ -44,3 +44,48 @@
     margin-left: -780px;
     z-index: 5;
   }
+
+  .slider_navigation {
+    margin: 0 auto;
+    margin-top: 870px;
+    width: 80px;
+  }
+
+  .slider-nav_wrapper {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .nav_dot {
+    width: 20px;
+    height: 20px;
+    background-color: rgba(242, 120, 92, 0.50);
+    border-radius: 50%;
+  }
+
+  .active_dot {
+    background-color: rgba(242, 120, 92);
+  }
+
+  .destination_button {
+    margin: 0 auto;
+    margin-top: 40px;
+    padding: 10px 32px;
+    width: 228px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+    background: #0D606F;
+    box-shadow: 0px 2px 3px 0px rgba(13, 96, 111, 0.16), 0px 0px 3px 0px rgba(13, 96, 111, 0.08);
+    color: #FFF;
+    font-family: Red Hat Text;
+    @include font($size:2.4rem, $weight:500);
+    &:hover {
+      cursor: pointer;
+    }
+  }
+
+  .destination_button span {
+    margin-left: 10px;
+  }
