--- a/sass/style.css
+++ b/sass/style.css
@@ -19,17 +19,17 @@ h1 {
   padding: 0;
   color: #FFF;
   font-family: Magra;
+  white-space: pre;
   font-size: 3.2rem;
   font-style: normal;
   font-weight: 600;
   line-height: normal;
-  white-space: pre;
 }
 
 h2 {
   color: #FFF;
   font-family: Aleo;
-  font-size: 80px;
+  font-size: 8rem;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
@@ -38,7 +38,7 @@ h2 {
 h3 {
   color: #F2785C;
   font-family: Red Hat Text;
-  font-size: 40px;
+  font-size: 4rem;
   font-style: normal;
   font-weight: 500;
   line-height: normal;
@@ -57,6 +57,40 @@ li {
 
 a {
   text-decoration: none;
+}
+
+.header_navigation_link {
+  transition: 0.4s all ease;
+}
+
+.preview_button {
+  margin-left: 310px;
+  color: #FFF;
+  font-family: Red Hat Text;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  padding: 14px 32px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px;
+  background: #0D606F;
+  box-shadow: 0px 2px 3px 0px rgba(13, 96, 111, 0.16), 0px 0px 3px 0px rgba(13, 96, 111, 0.08);
+}
+
+.header_buton {
+  color: #FFF;
+  font-family: Red Hat Text;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  max-width: 103px;
+  padding: 10px 30px;
+  border-radius: 10px;
+  background: #0D606F;
+  box-shadow: 0px 2px 3px 0px rgba(13, 96, 111, 0.16), 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
 header {
@@ -107,20 +141,6 @@ header {
   font-style: normal;
   font-weight: 500;
   line-height: normal;
-}
-
-.header_buton {
-  color: #FFF;
-  font-family: Red Hat Text;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-  max-width: 103px;
-  padding: 10px 30px;
-  border-radius: 10px;
-  background: #0D606F;
-  box-shadow: 0px 2px 3px 0px rgba(13, 96, 111, 0.16), 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
 .preview {
@@ -268,6 +288,54 @@ header {
   margin-top: 750px;
   margin-left: -780px;
   z-index: 5;
+}
+
+.slider_navigation {
+  margin: 0 auto;
+  margin-top: 870px;
+  width: 80px;
+}
+
+.slider-nav_wrapper {
+  display: flex;
+  justify-content: space-between;
+}
+
+.nav_dot {
+  width: 20px;
+  height: 20px;
+  background-color: rgba(242, 120, 92, 0.5);
+  border-radius: 50%;
+}
+
+.active_dot {
+  background-color: rgb(242, 120, 92);
+}
+
+.destination_button {
+  margin: 0 auto;
+  margin-top: 40px;
+  padding: 10px 32px;
+  width: 228px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 10px;
+  background: #0D606F;
+  box-shadow: 0px 2px 3px 0px rgba(13, 96, 111, 0.16), 0px 0px 3px 0px rgba(13, 96, 111, 0.08);
+  color: #FFF;
+  font-family: Red Hat Text;
+  font-size: 2.4rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+.destination_button:hover {
+  cursor: pointer;
+}
+
+.destination_button span {
+  margin-left: 10px;
 }
 
 /*# sourceMappingURL=style.css.map */
