--- a/sass/style.css
+++ b/sass/style.css
@@ -105,7 +105,6 @@ a {
 header {
   background: rgba(242, 120, 92, 0.7);
   box-shadow: 0px 4px 4px 0px rgba(13, 96, 111, 0.5);
-  width: 100%;
   opacity: 70%;
 }
 
@@ -240,6 +239,7 @@ header {
 .destination {
   margin: 0 auto;
   max-width: 1440px;
+  overflow: hidden;
 }
 
 .destination_title {
@@ -334,6 +334,14 @@ header {
 .stories {
   margin: 0 auto;
   max-width: 1440px;
+  background-image: url(/Travel/assets/images/footerbg.png);
+  background-position: center 90px;
+  background-repeat: no-repeat;
+}
+
+.stories_wrapper {
+  background: rgba(255, 255, 255, 0.7);
+  padding: 0 125px 0 120px;
 }
 
 .stories_title {
@@ -366,7 +374,7 @@ header {
   margin-top: 24px;
   color: #0D606F;
   font-family: Aleo;
-  font-size: 20px;
+  font-size: 1.8rem;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
@@ -380,6 +388,9 @@ header {
   font-weight: 700;
   line-height: normal;
   text-decoration-line: underline;
+}
+.read_more:hover {
+  cursor: pointer;
 }
 
 .stories_list .sories_item:nth-child(2) .sories_item_image {
@@ -403,7 +414,6 @@ header {
 .stories_button {
   margin: 0 auto;
   margin-top: 40px;
-  margin-bottom: 40px;
   padding: 10px 32px;
   width: 228px;
   display: flex;
@@ -419,8 +429,56 @@ header {
   font-weight: 500;
   line-height: normal;
 }
+.stories_button span {
+  margin-left: 10px;
+}
 .stories_button:hover {
   cursor: pointer;
+}
+
+.stories_bottom {
+  margin-top: 40px;
+  height: 1px;
+  width: 100%;
+  opacity: 1;
+}
+
+footer {
+  width: 1440px;
+  margin: 0 auto;
+  background-image: url(/Travel/assets/images/footerbg.png);
+  background-position: center bottom;
+  background-repeat: no-repeat;
+}
+
+.footer_wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: end;
+}
+
+.copyright {
+  color: #FFF;
+  font-family: Red Hat Text;
+  font-size: 1.6rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  padding: 20px 0;
+}
+
+.socials {
+  margin-right: 120px;
+  display: flex;
+  align-items: center;
+}
+
+.socials img:first-child {
+  margin-left: 328px;
+}
+
+.socials img {
+  margin-left: 20px;
 }
 
 /*# sourceMappingURL=style.css.map */
